task-26 fix
